--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-2 vh-100 m-0 p-0">
+        <aside class="side-bar bg-dark pt-4 text-white">
           {{ partial "sidebar.html" . }}
-        </div>
+        </aside>
         <div class="col">
           <header>{{ partial "header.html" . }}</header>
           <main>{{ block "main" . }}{{ end }}</main>
