--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,13 +2,33 @@
 <meta name="viewport" content="width=device-width" />
 <title>{{ .Title }}</title>
 
-{{/* Bootstrap */}}
+{{/* Local Bootstrap with custom Styles */}}
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
   rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
   crossorigin="anonymous"
 />
+
+{{ with resources.Get "sass/main.scss" }}
+  {{ $opts := dict "transpiler" "libsass" "targetPath" "css/style.css" }}
+  {{ with . | toCSS $opts }}
+    {{ if hugo.IsDevelopment }}
+      <link rel="stylesheet" href="{{ .RelPermalink }}" />
+    {{ else }}
+      {{ with . | minify | fingerprint }}
+        <link
+          rel="stylesheet"
+          href="{{ .RelPermalink }}"
+          integrity="{{ .Data.Integrity }}"
+          crossorigin="anonymous"
+        />
+      {{ end }}
+    {{ end }}
+  {{ end }}
+{{ end }}
+
+{{/* Bootstrap Javascript CDN */}}
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -31,12 +51,4 @@
   integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
-/>
-
-{{/* My Styles */}}
-{{ $styles := resources.Get "css/styles.css" | resources.Minify | resources.Fingerprint }}
-<link
-  rel="stylesheet"
-  href="{{ $styles.Permalink }}"
-  integrity="{{ $styles.Data.Integrity }}"
 />
