--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,50 +1,61 @@
-<aside class="h-100 bg-dark pt-4 text-white">
-  {{/* Profile Image */}}
-  <div class="d-flex flex-column bg-primary align-items-center">
-    {{/* NOTE: When using flex-column the main axis is y,
-      so use align instead of justify to center
-    */}}
-    <img
-      src="https://via.placeholder.com/150"
-      class="rounded-circle img-thumbnail"
-      alt="Profile Picture"
-    />
-    <h2 style="font-family: 'Roboto Condensed', sans-serif;">
-      Guilherme Soares
-    </h2>
-  </div>
+{{/* Profile Image */}}
+<div class="d-flex flex-column bg-primary align-items-center">
+  {{/* NOTE: When using flex-column the main axis is y,
+    so use align instead of justify to center
+  */}}
+  <img
+    src="https://via.placeholder.com/150"
+    class="rounded-circle img-thumbnail"
+    alt="Profile Picture"
+  />
+  <h2 style="font-family: 'Roboto Condensed', sans-serif;">Guilherme Soares</h2>
+</div>
 
-  {{/* Socials */}}
-  <div class="socials mt-3">
-    <ul class="list-unstyled d-flex justify-content-center">
-      <li>
-        <a
-          href="https://github.com/guilhas07"
-          target="_blank"
-          class="text-white"
-        >
-          <i class="fab fa-github fa-2x"></i>
-        </a>
-      </li>
-      <li>
-        <a
-          href="https://www.linkedin.com/in/guilherme-soares-532a87274/"
-          target="_blank"
-          class="text-white"
-        >
-          <i class="fab fa-linkedin fa-2x"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://x.com/gu1lty_01" target="_blank" class="text-white">
-          <i class="fab fa-twitter fa-2x"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
+{{/* Socials */}}
+<div class="socials mt-3">
+  <ul class="list-unstyled d-flex justify-content-center">
+    <li>
+      <a href="https://github.com/guilhas07" target="_blank" class="text-white">
+        <i class="fab fa-github fa-2x"></i>
+      </a>
+    </li>
+    <li>
+      <a
+        href="https://www.linkedin.com/in/guilherme-soares-532a87274/"
+        target="_blank"
+        class="text-white"
+      >
+        <i class="fab fa-linkedin fa-2x"></i>
+      </a>
+    </li>
+    <li>
+      <a href="https://x.com/gu1lty_01" target="_blank" class="text-white">
+        <i class="fab fa-twitter fa-2x"></i>
+      </a>
+    </li>
+  </ul>
+</div>
 
-  {{/* INFO */}}
-  <div class="">
-    {{ partial "render-md-and-html" .Params.sidebar_content }}
-  </div>
-</aside>
+{{/* INFO */}}
+<div class="">
+  <h2>About Me:</h2>
+  <p>
+    Hi! I'm Guilherme Soares, with a Master's degree in Computer Science and
+    Engineering from Instituto Superior Técnico, Portugal. I'm passionate about
+    [mention areas of interest or expertise], and I enjoy working on [mention
+    projects or fields you're involved in].
+  </p>
+  <h2>Get In Touch:</h2>
+
+  Feel free to reach out via my socials above, or you can email me directly:
+
+  <br />
+  <a class="text-break" href="mailto:guilherme.luis.soares2001@gmail.com">
+    <i class="fas fa-envelope"></i> guilherme.luis.soares2001@gmail.com
+  </a>
+  <br />
+
+  Whether you have a business proposal, want to collaborate on a project, want
+  discuss some topic or just want to say hi&ndash; I&rsquo;d love to hear from
+  you!
+</div>
