--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,1 +1,33 @@
-<h1>Main Page Title</h1>
+<nav class="navbar navbar-expand-lg bg-primary-subtle">
+  <div class="container-fluid p-0">
+    <div class="my-brand bg-body-tertiary">
+      <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
+    </div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="container-fluid">
+        <div class="my-nav navbar-nav">
+          {{ range .Site.Menus.main }}
+            <a
+              class="my-nav-el nav-link col col-lg-4 {{ if $.IsMenuCurrent .Menu . -}}
+                active" aria-current="true
+              {{- end -}}"
+              href="{{ .URL }}"
+              >{{ .Name }}
+            </a>
+          {{ end }}
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
