--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,5 +1,5 @@
 {{/* Profile Image */}}
-<div class="d-flex flex-column bg-primary align-items-center">
+<div class="d-flex flex-column align-items-center">
   {{/* NOTE: When using flex-column the main axis is y,
     so use align instead of justify to center
   */}}
@@ -8,14 +8,14 @@
     class="rounded-circle img-thumbnail"
     alt="Profile Picture"
   />
-  <h2 style="font-family: 'Roboto Condensed', sans-serif;">Guilherme Soares</h2>
+  <h2 class="my-name">Guilherme Soares</h2>
 </div>
 
 {{/* Socials */}}
 <div class="socials mt-3">
   <ul class="list-unstyled d-flex justify-content-center">
     <li>
-      <a href="https://github.com/guilhas07" target="_blank" class="text-white">
+      <a href="https://github.com/guilhas07" target="_blank">
         <i class="fab fa-github fa-2x"></i>
       </a>
     </li>
@@ -23,13 +23,12 @@
       <a
         href="https://www.linkedin.com/in/guilherme-soares-532a87274/"
         target="_blank"
-        class="text-white"
       >
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
     </li>
     <li>
-      <a href="https://x.com/gu1lty_01" target="_blank" class="text-white">
+      <a href="https://x.com/gu1lty_01" target="_blank">
         <i class="fab fa-twitter fa-2x"></i>
       </a>
     </li>
