--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-primary-subtle">
-  <div class="container-fluid p-0">
-    <div class="my-brand bg-body-tertiary">
-      <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
-    </div>
+{{/* When configuring navbar use its flexbox utilities */}}
+<nav class="navbar navbar-expand-lg p-0">
+  <div class="container-fluid p-0 align-items-stretch">
+    <a class="my-brand" href="/">{{ .Site.Title }}</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,7 +14,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="container-fluid">
+      <div class="container-fluid container-lg ms-0 p-0 h-100">
         <div class="my-nav navbar-nav">
           {{ range .Site.Menus.main }}
             <a
