--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
     so use align instead of justify to center
   */}}
   <img
-    src="https://via.placeholder.com/150"
+    src="/profile.jpg"
     class="rounded-circle img-thumbnail"
     alt="Profile Picture"
   />
