--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   {{ .Content }}
 
-  {{ $pages := where site.RegularPages "Type" "posts" }}
+  {{ $pages := .RegularPages }}
   {{ $paginator := .Paginate $pages }}
 
   {{ range $paginator.Pages }}
