--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,9 +21,21 @@
       <div class="container-fluid container-lg ms-0 p-0 h-100">
         <div class="my-nav navbar-nav">
           {{ range .Site.Menus.main }}
+            {{ $isActive := false }}
+            {{ $ariaCurrent := "teste" }}
+            {{ if $.IsMenuCurrent .Menu . }}
+              {{ $isActive = true }}
+              {{ $ariaCurrent = "page" }}
+            {{ else if $.HasMenuCurrent .Menu . }}
+              {{ $isActive = true }}
+              {{ $ariaCurrent = "true" }}
+            {{ end }}
+
+
             <a
-              class="my-nav-el nav-link col col-lg-4 {{ if $.IsMenuCurrent .Menu . -}}
-                active" aria-current="true
+              class="my-nav-el nav-link col col-lg-4 {{ if $isActive -}}
+                active"
+                aria-current="{{- $ariaCurrent -}}
               {{- end -}}"
               href="{{ .URL }}"
               >{{ .Name }}
