--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -115,11 +115,12 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
 }
 
 .my-side-bar {
-  @include make-col-ready();
-  @include make-col(2);
+  // @include make-col-ready();
+  // @include make-col(2);
 
   @include after-header();
 
+  position: sticky;
   overflow-y: auto;
   background-color: $my-grey;
 
@@ -127,7 +128,6 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
 
   // On devices lower than lg, take full width
   @include media-breakpoint-down(lg) {
-    @include make-col(12);
     height: auto;
   }
 }
@@ -137,15 +137,51 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
   color: $my-white;
 }
 
-.my-main {
+.my-main-layout {
   @include make-col-ready();
   @include make-col();
 
   @include after-header();
   border-left: 2px solid $my-primary !important;
   padding: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  // height: 100%;
+  overflow-y: auto;
 }
+
+// .my-main {
+//   // so footer gets placed at the bottom of the page
+//   margin-bottom: auto;
+// }
 
 .socials li {
   padding: 0.5rem !important;
+}
+
+.my-content {
+  width: 80%;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.my-toc {
+  position: sticky;
+  top: 0;
+  vertical-align: top;
+  display: inline-block;
+  overflow-y: none;
+  ul {
+    list-style: none;
+    // target direct child
+    li {
+      a {
+        color: $my-primary;
+        &.active {
+          color: red;
+        }
+      }
+    }
+  }
 }
