--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,20 +3,25 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body>
+  {{/* Spy on body in order to enable active link detection on Table of Content. By Default
+    hugo creates the Table of Contents with the id #TableOfContents
+  */}}
+  <body data-bs-spy="scroll" data-bs-target="#TableOfContents">
     <header class="my-header sticky-top">{{ partial "header.html" . }}</header>
     <div class="container-fluid">
       <div class="row">
-        <aside class="my-side-bar pt-4">
-          {{ partial "sidebar.html" . }}
-        </aside>
-        <div class="my-main">
-          <div class="h-100 d-flex flex-column align-items-start">
-            <main class="mb-auto">{{ block "main" . }}{{ end }}</main>
-            <footer class="w-100 text-center">
-              {{ partial "footer.html" . }}
-            </footer>
-          </div>
+        <div class="col-lg-2 col-12">
+          <aside class="my-side-bar pt-4">
+            {{ partial "sidebar.html" . }}
+          </aside>
+        </div>
+        <div class="my-main-layout">
+          <main class="mb-auto">
+            {{ block "main" . }}{{ end }}
+          </main>
+          <footer class="w-100 text-center">
+            {{ partial "footer.html" . }}
+          </footer>
         </div>
       </div>
     </div>
