--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,12 +1,18 @@
 {{ define "main" }}
   {{ .Content }}
-
-  {{ $pages := .RegularPages }}
-  {{ $paginator := .Paginate $pages }}
-
-  {{ range $paginator.Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-  {{ end }}
-
-  {{ template "_internal/pagination.html" . }}
+  <div class="row">
+    {{ range .RegularPages }}
+      <div class="col-sm-4 mb-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ .Title }}</h5>
+            <p class="card-text">
+              {{ .Summary }}
+            </p>
+            <a href="{{ .RelPermalink }}" class="btn btn-primary">Read More</a>
+          </div>
+        </div>
+      </div>
+    {{ end }}
+  </div>
 {{ end }}
