--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,8 @@
 {{ define "main" }}
-  {{ .Content }}
+  <div class="my-content">
+    {{ .Content }}
+  </div>
+  <div class="my-toc">
+    {{ .TableOfContents }}
+  </div>
 {{ end }}
