--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<title>{{ .Title }}</title>
+<title>{{ .Title }}|{{ .Site.Title }}</title>
 
 {{/* Local Bootstrap with custom Styles */ -}}
 {{- with resources.Get "sass/main.scss" -}}
@@ -22,12 +22,17 @@
 {{- end -}}
 
 {{/* Bootstrap Javascript CDN */}}
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"
-  defer
-></script>
+{{- if hugo.IsDevelopment -}}
+  <!-- <script src="/js/bootstrap.bundle.js"></script> -->
+  <script src="/js/script.js" defer></script>
+{{- else -}}
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+    defer
+  ></script>
+{{ end }}
 
 {{/* Google Fonts */}}
 <link rel="preconnect" href="https://fonts.googleapis.com" />
