feat: implement scroll spy
- Bootstrap scroll behaviour was weird. Implement my own

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   {{/* Spy on body in order to enable active link detection on Table of Content. By Default
     hugo creates the Table of Contents with the id #TableOfContents
   */}}
-  <body data-bs-spy="scroll" data-bs-target="#TableOfContents">
+  <body>
     <header class="my-header sticky-top">{{ partial "header.html" . }}</header>
     <div class="container-fluid">
       <div class="row">
