--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
           {{ partial "sidebar.html" . }}
         </aside>
         <div class="my-main-layout">
-          <main class="mb-auto">
+          <main class="mb-auto d-flex">
             {{ block "main" . }}{{ end }}
           </main>
           <footer class="w-100 text-center">
