--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -60,11 +60,9 @@ $font-header-size: 1.5rem;
 $header-size: $font-header-size * 2.17; // TODO: examine better this height relative to root font size
 
 .my-header {
-  // background-color: $my-secondary;
   background-color: $my-black;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
-  // height: $header-size;
   font-size: $font-header-size;
 }
 
@@ -109,8 +107,7 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
   }
 }
 
-.my-nav {
-  height: 100%;
+.navbar-nav {
   .my-nav-el {
     text-align: center !important;
     background-color: $my-black;
@@ -246,4 +243,12 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
       }
     }
   }
+}
+
+// Home
+
+.my-home {
+  padding: 2rem;
+  border: 2px solid $my-primary !important;
+  display: flex;
 }
