--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,7 @@
           </aside>
         {{ end }}
         <div class="my-main-layout">
-          <main class="mb-auto d-flex">
+          <main class="w-100 mb-auto">
             {{ block "main" . }}{{ end }}
           </main>
           <footer class="w-100 text-center">
