--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,10 +19,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="container-fluid container-lg ms-0 p-0 h-100">
-        <div class="my-nav navbar-nav">
+        <div class="navbar-nav">
           {{- range .Site.Menus.main -}}
             {{- $isActive := false }}
-            {{- $ariaCurrent := "teste" -}}
+            {{- $ariaCurrent := "" -}}
             {{ if $.IsMenuCurrent .Menu . -}}
               {{- $isActive = true -}}
               {{- $ariaCurrent = "page" -}}
@@ -33,7 +33,7 @@
 
 
             <a
-              class="my-nav-el nav-link col col-lg-4 {{ if $isActive -}}
+              class="my-nav-el nav-link col col-lg-3 {{ if $isActive -}}
                 active"
                 aria-current="{{- $ariaCurrent -}}
               {{- end -}}"
