--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,20 +1,22 @@
 {{ define "main" }}
-    {{ .Content }}
-    <div class="row p-2">
-        {{ range .RegularPages }}
-            <a
-                class="col-sm-4 mb-3 text-decoration-none"
-                href="{{ .RelPermalink }}"
-            >
-                <div class="card h-100 my-btn btn text-start">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ .Title }}</h5>
-                        <p class="card-text">
-                            {{ .Summary }}
-                        </p>
+    <div class="p-4">
+        {{ .Content }}
+        <div class="row p-2">
+            {{ range .RegularPages }}
+                <a
+                    class="col-sm-4 mb-3 text-decoration-none"
+                    href="{{ .RelPermalink }}"
+                >
+                    <div class="card h-100 my-btn btn text-start">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ .Title }}</h5>
+                            <p class="card-text">
+                                {{ .Summary }}
+                            </p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        {{ end }}
+                </a>
+            {{ end }}
+        </div>
     </div>
 {{ end }}
