--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -27,31 +27,31 @@ $btn-bg: $my-primary;
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 .my-btn {
-  @include button-variant($my-grey, $my-primary);
-  // text-decoration: none !important;
+    @include button-variant($my-grey, $my-primary);
+    // text-decoration: none !important;
 }
 
 .my-disabled-btn {
-  @include button-variant($my-grey, $my-grey-3);
-  color: $my-grey-3;
+    @include button-variant($my-grey, $my-grey-3);
+    color: $my-grey-3;
 }
 
 //TODO: define more text colors
 
 body {
-  background-color: $my-grey;
-  color: $my-white;
-  // NOTE: prevent animation from being triggered before page load
-  &.preload {
-    visibility: hidden;
-    * {
-      -webkit-transition: none !important;
-      -moz-transition: none !important;
-      -ms-transition: none !important;
-      -o-transition: none !important;
-      transition: none !important;
+    background-color: $my-grey;
+    color: $my-white;
+    // NOTE: prevent animation from being triggered before page load
+    &.preload {
+        visibility: hidden;
+        * {
+            -webkit-transition: none !important;
+            -moz-transition: none !important;
+            -ms-transition: none !important;
+            -o-transition: none !important;
+            transition: none !important;
+        }
     }
-  }
 }
 
 // START OF HEADER
@@ -60,82 +60,83 @@ $font-header-size: 1.5rem;
 $header-size: $font-header-size * 2.17; // TODO: examine better this height relative to root font size
 
 .my-header {
-  background-color: $my-black;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: bold;
-  font-size: $font-header-size;
+    background-color: $my-black;
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: bold;
+    font-size: $font-header-size;
 }
 
 .my-brand {
-  @include make-col-ready();
-  @include make-col(2);
+    @include make-col-ready();
+    @include make-col(2);
 
-  .my-port {
-    color: $my-primary;
-  }
-
-  .my-host {
-    color: $my-white;
-  }
-
-  &:hover {
-    .my-host {
-      color: lighten($my-white, 10%);
-    }
+    font-size: clamp(1rem, 1.5vw, 2rem);
     .my-port {
-      color: lighten($my-primary, 10%);
-    }
-  }
-
-  text-decoration: none;
-  white-space: nowrap;
-  // text-align: center !important;
-  padding: 0.25rem !important;
-
-  display: flex;
-  background-color: $my-black;
-  align-items: center;
-
-  // Make padding equal to nav-elements
-  // padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
-
-  // border-right: 2px solid $my-secondary !important;
-
-  @include media-breakpoint-down(lg) {
-    @include make-col(12);
-    height: auto;
-  }
-}
-
-.navbar-nav {
-  .my-nav-el {
-    text-align: center !important;
-    background-color: $my-black;
-
-    color: $my-white;
-    border-left: 2px solid $my-grey !important;
-
-    &.active {
-      background-color: $my-grey;
-      border-left: 2px solid $my-primary !important;
-      color: $my-primary;
-
-      &:hover {
-        background-color: $my-grey;
-        color: lighten($my-primary, 10%);
-      }
+        color: $my-primary;
     }
 
-    &:last-child {
-      border-right: 2px solid $my-grey !important;
+    .my-host {
+        color: $my-white;
     }
 
     &:hover {
-      // color: $my-primary;
-      color: lighten($my-white, 10%);
-      background-color: lighten($my-black, 5%);
+        .my-host {
+            color: lighten($my-white, 10%);
+        }
+        .my-port {
+            color: lighten($my-primary, 10%);
+        }
     }
-  }
+
+    text-decoration: none;
+    white-space: nowrap;
+    // text-align: center !important;
+    padding: 0.25rem !important;
+
+    display: flex;
+    background-color: $my-black;
+    align-items: center;
+
+    // Make padding equal to nav-elements
+    // padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+
+    // border-right: 2px solid $my-secondary !important;
+
+    @include media-breakpoint-down(lg) {
+        @include make-col(12);
+        height: auto;
+    }
+}
+
+.navbar-nav {
+    .my-nav-el {
+        text-align: center !important;
+        background-color: $my-black;
+
+        color: $my-white;
+        border-left: 2px solid $my-grey !important;
+
+        &.active {
+            background-color: $my-grey;
+            border-left: 2px solid $my-primary !important;
+            color: $my-primary;
+
+            &:hover {
+                background-color: $my-grey;
+                color: lighten($my-primary, 10%);
+            }
+        }
+
+        &:last-child {
+            border-right: 2px solid $my-grey !important;
+        }
+
+        &:hover {
+            // color: $my-primary;
+            color: lighten($my-white, 10%);
+            background-color: lighten($my-black, 5%);
+        }
+    }
 }
 
 // END OF HEADER
@@ -144,111 +145,111 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
 
 // Define mixin for placing elements after header
 @mixin after-header() {
-  top: $header-size;
-  height: subtract(100vh, $header-size);
+    top: $header-size;
+    height: subtract(100vh, $header-size);
 }
 
 .my-side-bar {
-  @include make-col-ready();
-  @include after-header();
+    @include make-col-ready();
+    @include after-header();
 
-  position: sticky;
-  overflow-y: auto;
-  background-color: $my-black;
+    position: sticky;
+    overflow-y: auto;
+    background-color: $my-black;
 
-  align-items: center;
-  flex-direction: column;
-  display: flex;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
 
-  // NOTE: initial values before transition to show
-  width: 0;
-  padding: 0;
-  opacity: 0;
+    // NOTE: initial values before transition to show
+    width: 0;
+    padding: 0;
+    opacity: 0;
 
-  transition-property: all;
-  transition-duration: 0.3s;
-  transition-timing-function: linear;
-  &.show {
-    padding: 1.25rem;
-    opacity: 1;
-    @include make-col(2);
-  }
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: linear;
+    &.show {
+        padding: 1.25rem;
+        opacity: 1;
+        @include make-col(2);
+    }
 
-  // On devices lower than lg, take full width
-  @include media-breakpoint-down(lg) {
-    height: auto;
-    @include make-col(12);
-  }
+    // On devices lower than lg, take full width
+    @include media-breakpoint-down(lg) {
+        height: auto;
+        @include make-col(12);
+    }
 }
 
 .my-name {
-  font-family: "Roboto Condensed", sans-serif;
-  padding: 1rem;
-  color: $my-white;
+    font-family: "Roboto Condensed", sans-serif;
+    padding: 1rem;
+    color: $my-white;
 }
 
 .my-main-layout {
-  @include make-col-ready();
-  @include make-col();
+    @include make-col-ready();
+    @include make-col();
 
-  @include after-header();
-  border-left: 2px solid $my-primary !important;
-  // padding: 1.25rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  // height: 100%;
-  overflow-y: auto;
+    @include after-header();
+    border-left: 2px solid $my-primary !important;
+    // padding: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    // height: 100%;
+    overflow-y: auto;
 }
 
 .socials li {
-  padding: 0.5rem !important;
+    padding: 0.5rem !important;
 }
 
 .my-post-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $my-grey;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: $my-grey;
 }
 
 .my-toc {
-  position: sticky;
-  top: 0;
-  vertical-align: top;
-  // display: inline-block;
-  //overflow-y: none;
-  font-size: 1.2rem;
-  text-decoration: none;
-  ul {
-    list-style: none;
-    // target direct child
-    li {
-      a {
-        // color: $my-secondary;
-        display: block;
-        padding: 0.5rem;
-        text-decoration: none;
-        color: $my-green-secondary;
-        &.active {
-          color: $my-primary !important; // prevent hover from overriding
+    position: sticky;
+    top: 0;
+    vertical-align: top;
+    // display: inline-block;
+    //overflow-y: none;
+    font-size: 1.2rem;
+    text-decoration: none;
+    ul {
+        list-style: none;
+        // target direct child
+        li {
+            a {
+                // color: $my-secondary;
+                display: block;
+                padding: 0.5rem;
+                text-decoration: none;
+                color: $my-green-secondary;
+                &.active {
+                    color: $my-primary !important; // prevent hover from overriding
+                }
+                &:hover {
+                    color: lighten($my-green-secondary, 10%);
+                }
+            }
+            &:has(a.active) {
+                // Add styles to the <li> here when <a> is active
+                border-left: 2px solid $my-primary !important;
+            }
         }
-        &:hover {
-          color: lighten($my-green-secondary, 10%);
-        }
-      }
-      &:has(a.active) {
-        // Add styles to the <li> here when <a> is active
-        border-left: 2px solid $my-primary !important;
-      }
     }
-  }
 }
 
 // Home
 
 .my-home {
-  padding: 2rem;
-  border: 2px solid $my-primary !important;
-  display: flex;
+    padding: 2rem;
+    border: 2px solid $my-primary !important;
+    display: flex;
 }
