feat: create responsive layout for under lg breakpoint

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
         </header>
         <div class="container-fluid">
             <div class="row">
-                <aside class="my-side-bar pt-4" id="my-side-bar">
+                <aside class="my-side-bar pt-4">
                     {{ partial "sidebar.html" . }}
                 </aside>
                 <div class="my-main-layout">
