--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -34,7 +34,7 @@
 </div>
 
 {{/* INFO */}}
-<div class="">
+<div>
     <h2>About Me:</h2>
     <p>
         Hi! I'm Guilherme Soares, with a Master's degree in Computer Science and
@@ -47,12 +47,15 @@
     Feel free to reach out via my socials above, or you can email me directly:
 
     <br />
-    <a class="text-break" href="mailto:guilherme.luis.soares2001@gmail.com">
-        <i class="fas fa-envelope"></i> guilherme.luis.soares2001@gmail.com
+    <br />
+    <a
+        class="my-email d-flex align-items-center justify-content-center"
+        href="mailto:guilherme.luis.soares2001@gmail.com"
+    >
+        <i class="p-1 fas fa-envelope"></i> guilherme.luis.soares2001@gmail.com
     </a>
     <br />
 
     Whether you have a business proposal, want to collaborate on a project, want
-    discuss some topic or just want to say hi&ndash; I&rsquo;d love to hear from
-    you!
+    discuss some topic or just want to say hi- I'd love to hear from you!
 </div>
