--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -57,20 +57,33 @@ body {
 // START OF HEADER
 
 $font-header-size: 1.5rem;
-$header-size: $font-header-size * 2.17; // TODO: examine better this height relative to root font size
+// TODO: examine better this height relative to root font size
+$header-size: $font-header-size * 2.5;
+$side-bar-size: 300px;
 
 .my-header {
     background-color: $my-black;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: bold;
     font-size: $font-header-size;
+    height: $header-size;
+
+    .container-fluid,
+    .navbar-collapse,
+    .navbar-nav,
+    .my-brand,
+    nav {
+        height: 100%;
+    }
 }
 
 .my-brand {
     @include make-col-ready();
     @include make-col(2);
 
-    font-size: clamp(1rem, 1.5vw, 2rem);
+    min-width: $side-bar-size;
+    // font-size: clamp(1rem, 1.5vw, $font-header-size);
+
     .my-port {
         color: $my-primary;
     }
@@ -88,23 +101,25 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
         }
     }
 
-    text-decoration: none;
+    * {
+        text-decoration: none;
+    }
     white-space: nowrap;
-    // text-align: center !important;
-    padding: 0.25rem !important;
-
     display: flex;
     background-color: $my-black;
     align-items: center;
 
     // Make padding equal to nav-elements
-    // padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+    // padding-x: 0 var(--bs-navbar-nav-link-padding-x) 0
+    //     var(--bs-navbar-nav-link-padding-x);
+    // padding: 0rem;
 
     // border-right: 2px solid $my-secondary !important;
 
     @include media-breakpoint-down(lg) {
         @include make-col(12);
         height: auto;
+        justify-content: center;
     }
 }
 
@@ -139,20 +154,31 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
     }
 }
 
+.navbar-toggler {
+    .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='rgba(255,255,255,1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
+    }
+}
+
 // END OF HEADER
 
 // My custom elements
 
 // Define mixin for placing elements after header
 @mixin after-header() {
-    top: $header-size;
+    // top: $header-size;
     height: subtract(100vh, $header-size);
+}
+
+.my-email {
+    font-size: clamp(0.8rem, 0.75vw, 1rem);
 }
 
 .my-side-bar {
     @include make-col-ready();
     @include after-header();
 
+    min-width: $side-bar-size;
     position: sticky;
     overflow-y: auto;
     background-color: $my-black;
@@ -170,15 +196,17 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
     transition-duration: 0.3s;
     transition-timing-function: linear;
     &.show {
+        @include make-col(2);
         padding: 1.25rem;
         opacity: 1;
-        @include make-col(2);
-    }
 
-    // On devices lower than lg, take full width
-    @include media-breakpoint-down(lg) {
-        height: auto;
-        @include make-col(12);
+        // On devices lower than lg, take full width
+        @include media-breakpoint-down(lg) {
+            @include make-col(12);
+            height: auto;
+            // overflow-y: visible;
+            flex-grow: 1;
+        }
     }
 }
 
@@ -200,6 +228,12 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
     align-items: flex-start;
     // height: 100%;
     overflow-y: auto;
+
+    @include media-breakpoint-down(lg) {
+        height: auto;
+        @include make-col(12);
+        overflow-y: visible;
+    }
 }
 
 .socials li {
@@ -211,11 +245,16 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
     align-items: center;
     justify-content: space-between;
     background-color: $my-grey;
+    z-index: 1010;
+
+    @include media-breakpoint-down(lg) {
+        top: $header-size;
+    }
 }
 
 .my-toc {
     position: sticky;
-    top: 0;
+    z-index: 1010;
     vertical-align: top;
     // display: inline-block;
     //overflow-y: none;
@@ -242,7 +281,13 @@ $header-size: $font-header-size * 2.17; // TODO: examine better this height rela
                 // Add styles to the <li> here when <a> is active
                 border-left: 2px solid $my-primary !important;
             }
+            // NOTE: to keep the width constant, create a border with background-color
+            border-left: 2px solid $my-grey !important;
         }
+    }
+
+    @include media-breakpoint-down(lg) {
+        top: $header-size;
     }
 }
 
