--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="container-fluid p-3">
+    <div class="container p-3">
         <div class="my-home">
             <div class="align-self-center" style="flex-basis:33%">
                 <img
