--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
 */}}
 <img
     src="/profile.jpg"
-    class="rounded-circle img-thumbnail"
+    class="rounded-circle img-thumbnail my-profile-img"
     alt="Profile Picture"
 />
 <h2 class="my-name">Guilherme Soares</h2>
