--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
                 {{ end }}
 
 
-                <a class="btn my-btn" href="{{ .RelPermalink }}"
+                <a class="btn my-btn-2" href="{{ .RelPermalink }}"
                     >{{ .Title }}</a
                 >
 
