feat: add website logo

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,8 +1,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
+<link rel="icon" href="/code-solid.svg" type="image/icon type" />
 <title>
     {{ if .Title }}
-        {{ .Title }}|{{ .Site.Title }}
+        {{ .Title }} |
+        {{ .Site.Title }}
     {{ else }}
         {{ .Site.Title }}
     {{ end }}
